Fix wrong font size in blockquote text

--- a/src/style/markdown.less
+++ b/src/style/markdown.less
@@ -4,7 +4,7 @@
 		margin-top: 1.25rem;
 	}
 
-	p:first-of-type {
+	> p:first-of-type {
 		font-size: 1.4rem;
 		font-weight: 300;
 		line-height: 1.4;
